[gd_scene load_steps=4 format=3 uid="uid://cxsb4um6wwqac"]

[ext_resource type="Script" uid="uid://knfd6k8iax6u" path="res://Scripts/bullet.gd" id="1_oduel"]
[ext_resource type="Texture2D" uid="uid://cec0l18u2h6ml" path="res://Sprites/Spritesheet.png" id="2_ycag2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjvhh"]
size = Vector2(20, 6)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_oduel")
owner_group = "Player"

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ycag2")
region_enabled = true
region_rect = Rect2(1829, 300, 22, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jjvhh")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
